2005-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* DataViewTest.cs : With a tiny fix, removed NotDotNet.

2005-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* DataRowTest.cs : added DetachedRowItemException().
	* DataSetTest.cs : WriteXmlSchema7() is now NotWorking.

2005-01-25  Sureshkumar T  <tsureshkumar@novell.com>

	* DataTableTest.cs: added test case for checking ImportRow when
	the row state is detached. Test case by Ankit Jain.

2005-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* DataRowViewTest.cs : added IsEdit tests and Item tess (not working).

2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DataRowViewTest.cs : added new file.

2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSetReadXmlSchemaTest.cs : test labels were ambiguous.
	* DataViewTest.cs : indentation was heavily broken.

2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DataColumnTest.cs : Added SetMaxLength().

2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* store2.xsd, store3.xsd, store4.xsd : Added.
	* DataSetTest.cs :
	  Disabled ReadWriteXmlSchema() and ReadWriteXmlSchemaIgnoreSchema()
	  for now. See the details in the code.

2005-01-21  Atsushi Enomoto  <atsushi@ximian.com>

	* DataRowTest.cs : more test for Current -> Default, test for 
	  VersionNotFound, and test for InvalidConstraint on GetChildRows().
	  Patch by Ankit Jain.

2005-01-21  Atsushi Enomoto  <atsushi@ximian.com>

	* DataRowTest.cs : Test if Default is used to check state of the row
	  instead of Detached. Patch by Ankit Jain.

2005-01-21  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSetTest.cs : added CloneCopy2().

2005-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSetTest.cs : use more normalized schema comparison.

2005-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* DataSetTest.cs,
	  DataSetAssertionTest.cs : In GetNormalizedSchema(), use manual
	  sorting using dom  so that it can ignore XmlSerializer difference.
	  Added some new assertion methods.
